scripts/nullness/original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8.txt
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Card.java:47: error: [override.param] Incompatible parameter type for other.
	public boolean equals(Object other) {
	                             ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Card
    @Initialized @NonNull boolean equals(@Initialized @NonNull Card this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Distribution.java:114: error: [dereference.of.nullable] dereference of possibly-null reference detailedDistribution.get(h.playableHand().size())
			detailedDistribution.get(h.playableHand().size()).add(h);
			                        ^
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Distribution.java:119: error: [argument] incompatible argument for parameter hands of Distribution.display.
			sb.append("\n" + display(detailedDistribution.get(i), 10));
			                                                 ^
  found   : @Initialized @Nullable Multiset<@Initialized @NonNull Hand>
  required: @Initialized @NonNull Collection<@Initialized @NonNull Hand>
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Hand.java:12: error: [assignment] incompatible types in assignment.
	private static Map<Hand, List<Card>> handValues = null;
	                                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull Map<@Initialized @NonNull Hand, @Initialized @NonNull List<@Initialized @NonNull Card>>
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Hand.java:220: error: [override.param] Incompatible parameter type for other.
	public boolean equals(Object other) {
	                             ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Hand
    @Initialized @NonNull boolean equals(@Initialized @NonNull Hand this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
